--- a/css/style.css
+++ b/css/style.css
@@ -428,6 +428,8 @@ template {
 	display: none !important;
 }
 
+
+
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
 	margin-bottom: 0.5rem;
@@ -8980,8 +8982,10 @@ h1, .h1 {
     margin-bottom: 21px;
     font-size: 36px;
     line-height: 1.5;
-    background: linear-gradient(0.25turn, #c39e08, #c39e0852, #ffffff);
-    padding-left: 15px;
+    /*background: linear-gradient(0.25turn, #c39e08, #c39e0852, #ffffff); */
+    padding: 20px;
+	font-family: 'Gagalin', Arial, Helvetica, sans-serif;
+	text-align: center;
 }
 
 @media (min-width: 768px) {
@@ -9547,7 +9551,7 @@ mark,
 }
 
 .bg-danger {
-	background: linear-gradient(90deg, #b39f12 0%, #b58803 100%);
+	background: linear-gradient(90deg, #000000 0%, #000000 100%);
 }
 
 .bg-lilac {
@@ -24102,7 +24106,7 @@ fieldset[disabled] .swiper-slide-caption .btn-default {
 	transition: .3s all ease;
 	position: relative;
 	text-align: left;
-	padding: 0 0 23px 0;
+	padding: 0px;
 	border-radius: 3px;
 }
 
@@ -24226,7 +24230,7 @@ fieldset[disabled] .swiper-slide-caption .btn-default {
 }
 
 .rd-navbar-floated.rd-navbar-dark .rd-navbar-inner {
-	background: transparent;
+	background: #000000;
 }
 
 .rd-navbar-floated.rd-navbar-dark .rd-navbar-inner .rd-navbar-nav > li.active > a, .rd-navbar-floated.rd-navbar-dark .rd-navbar-inner .rd-navbar-nav > li.focus > a, .rd-navbar-floated.rd-navbar-dark .rd-navbar-inner .rd-navbar-nav > li > a:hover {
