--- a/css/style.css
+++ b/css/style.css
@@ -235,6 +235,8 @@ a {
 	text-decoration: none;
 	background-color: transparent;
 	-webkit-text-decoration-skip: objects;
+	padding: 5px;
+    margin: 0px;
 }
 
 a:hover {
