--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,6 @@ html {
 	width: device-width;
 }
 
-article,
 aside,
 figcaption,
 figure,
@@ -128,6 +127,7 @@ main,
 nav,
 section {
 	display: block;
+	article,
 }
 
 h2 {
@@ -21752,9 +21752,9 @@ a.icon {
 .icon-xs.icon-circle,
 .icon-xs.icon-rounded {
 	width: 40px;
-    height: 40px;
-    line-height: 40px;
-    font-size: 18px;
+	height: 40px;
+	line-height: 40px;
+	font-size: 18px;
 }
 
 .icon-sm {
@@ -22024,7 +22024,8 @@ a.icon-circle.fa-instagram:hover,
 a.icon-outlined.fa-instagram:hover,
 a.icon-rounded.fa-instagram:hover {
 	color: #fff;
-	background: #a31111a6;;
+	background: #a31111a6;
+	;
 }
 
 a.icon-rect.fa-google-plus:hover,
@@ -33680,14 +33681,14 @@ html:not(.ie-11):not(.ios) .parallax-disabled {
 
 .video-container {
 	display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 0px;
-    border: 2px solid #ddd;
-    border-radius: 8px;
-    background-color: #ffffff;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: transform 1.0s ease, box-shadow 0.3s ease;
+	align-items: center;
+	gap: 10px;
+	padding: 0px;
+	border: 2px solid #ddd;
+	border-radius: 8px;
+	background-color: #ffffff;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	transition: transform 1.0s ease, box-shadow 0.3s ease;
 }
 
 .video-container:hover {
@@ -33697,9 +33698,9 @@ html:not(.ie-11):not(.ios) .parallax-disabled {
 
 .video-frame iframe {
 	width: 85%;
-    height: 450px;
-    border-radius: 20px;
-    transition: transform 0.3s cubic-bezier(0.65, -0.58, 0, 0.7);
+	height: 450px;
+	border-radius: 20px;
+	transition: transform 0.3s cubic-bezier(0.65, -0.58, 0, 0.7);
 }
 
 .video-frame iframe:hover {
@@ -33707,18 +33708,21 @@ html:not(.ie-11):not(.ios) .parallax-disabled {
 }
 
 .description {
-	max-width: 380px;
+	max-width: 290px;
 	color: #333;
 }
 
 .description h2 {
-	font-size: 1.5rem;
-	margin-left: 75px;
+	font-size: 60px;
+    margin-left: 30px;
+    font-family: 'Gagalin', 'helveyic', sans-serif;
+
 }
 
 .description p {
-	font-size: 1rem;
-	line-height: 1.5;
+	font-size: 35px;
+    line-height: 1.5;
+    font-family: gagalin, helvetic, sans-serif;
 }
 
 p .ambiente {
@@ -33727,12 +33731,10 @@ p .ambiente {
 	padding: 0% 5%;
 	margin: auto;
 	color: blue;
-}  
+}
 
 /* FRAME DE VIDEO FIM */
 
 fa fa-instagram icon-xxs icon-circle icon-darkest-filled {
 	background-color: blue;
 }
-
-
