--- a/css/style.css
+++ b/css/style.css
@@ -33699,14 +33699,14 @@ html:not(.ie-11):not(.ios) .parallax-disabled {
 
 .video-container {
 	display: flex;
-	align-items: center;
-	gap: 10px;
-	padding: 0px;
-	border: 2px solid #ddd;
-	border-radius: 8px;
-	background-color: #ffffff;
-	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-	transition: transform 1.0s ease, box-shadow 0.3s ease;
+    align-items: center;
+    gap: 10px;
+    padding: 0px;
+    border: 2px solid #ffffff00;
+    border-radius: 8px;
+    background-color: #ffffff00;
+    box-shadow: 0 4px 6px rgb(0 0 0 / 26%);
+    transition: transform 1.0s ease, box-shadow 0.3s ease;
 }
 
 .video-container:hover {
