--- a/css/style.css
+++ b/css/style.css
@@ -24683,6 +24683,7 @@ fieldset[disabled] .swiper-slide-caption .btn-default {
 	position: relative;
 	z-index: 99999;
 	text-align: left;
+	text-align: -webkit-center;
 }
 
 .rd-navbar ul {
@@ -26363,7 +26364,7 @@ fieldset[disabled] .swiper-slide-caption .btn-default {
 	content: '';
 	position: absolute;
 	top: 0;
-	width: 100%;
+	width: 65%;
 	height: 100%;
 }
 
@@ -26467,6 +26468,7 @@ fieldset[disabled] .swiper-slide-caption .btn-default {
 
 .rd-navbar-floated.rd-navbar-dark .rd-navbar-inner {
 	background: #000000;
+	width: 65%;
 }
 
 .rd-navbar-floated.rd-navbar-dark .rd-navbar-inner .rd-navbar-nav>li.active>a,
@@ -26486,7 +26488,7 @@ fieldset[disabled] .swiper-slide-caption .btn-default {
 }
 
 .rd-navbar-floated.rd-navbar-dark.rd-navbar-static.rd-navbar--is-stuck {
-	background: #191919;
+	background: #000000;
 }
 
 .rd-navbar-floated.rd-navbar-light .rd-navbar-inner {
@@ -33698,17 +33700,15 @@ html:not(.ie-11):not(.ios) .parallax-disabled {
 /* FRAME DE VIDEO INICIO */
 
 .video-container {
-	display: flex
-	;
-		align-items: center;
-		gap: 15px;
-		padding: 45px;
-		border: 2px solid #ffffff00;
-		border-radius: 8px;
-		background-color: #ffffff00;
-		box-shadow: 0 4px 6px rgb(0 0 0 / 26%);
-		transition: transform 1.0s ease, box-shadow 0.3s ease;
-	
+	display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 0px;
+    border: 2px solid #ffffff00;
+    border-radius: 8px;
+    background-color: #ffffff00;
+    box-shadow: 0 4px 6px rgb(0 0 0 / 26%);
+    transition: transform 1.0s ease, box-shadow 0.3s ease;
 }
 
 .video-container:hover {
@@ -33755,16 +33755,15 @@ p .ambiente {
 
 /* FRAME DE VIDEO FIM */
 
-fa fa-instagram icon-xxs icon-circle icon-darkest-filled {
-	background-color: blue;
-}
+
 
 /* Estilização da div do banner */
-.parallax-banner-home {
-    width: 100%; /* Preenche a largura da tela */
-    height: 100vh; /* Ocupa a altura total da viewport */
-    background-size: cover; /* Ajusta a imagem para cobrir o banner */
-    background-attachment: fixed; /* Habilita o efeito parallax */
-    background-position: center; /* Centraliza a imagem no banner */
-    background-repeat: no-repeat; /* Evita que a imagem se repita */
-}
+/*.parallax-banner-home {
+  /*  width: 100%; /* Preenche a largura da tela */
+    /*height: 100vh; /* Ocupa a altura total da viewport */
+    /*background-image: url('#'); /* Substitua pelo caminho da sua imagem */
+    /*background-size: cover; /* Ajusta a imagem para cobrir o banner */
+    /*background-attachment: fixed; /* Habilita o efeito parallax */
+    /*background-position: center; /* Centraliza a imagem no banner */
+    /*background-repeat: no-repeat; /* Evita que a imagem se repita */
+/*}*/ 
