--- a/css/style.css
+++ b/css/style.css
@@ -33769,7 +33769,7 @@ p .ambiente {
 }
 
 .image-container-planos img {
-    width: 65%;
+    width: 50%;
     height: auto;
     object-fit: cover; /* Ajusta a imagem para preencher o espaço sem distorcer */
 }
@@ -33793,9 +33793,9 @@ p .ambiente {
 
 /* Estilo do vídeo */
 .video-container iframe {
-    width: 80%; /* Ajusta a largura para se adaptar à tela */
-    max-width: 1080px; /* Limita a largura máxima */
-    height: 600px; /* Altura do vídeo */
+    width: 95%; /* Ajusta a largura para se adaptar à tela */
+    max-width: 100%; /* Limita a largura máxima */
+    height: auto; /* Altura do vídeo */
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border: none;
@@ -33806,4 +33806,30 @@ p .ambiente {
     color: #555;
     margin-top: 10px;
     text-align: center;
+}
+
+.video-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+/* Estilo da div do vídeo */
+.video-container-2 {
+    width: 80%; /* Ajusta a largura para ser responsivo */
+    max-width: 1080px; /* Limite máximo da largura */
+    aspect-ratio: 16 / 9; /* Proporção do vídeo */
+    position: relative;
+    background: #000; /* Cor de fundo enquanto o vídeo carrega */
+    border-radius: 10px; /* Bordas arredondadas */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para destacar */
+    overflow: hidden; /* Garante que o conteúdo não exceda as bordas */
+}
+
+.video-container-2 iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
 }
