--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,7 @@ sup {
 }
 
 a {
-	color: #8d6214;
+	color: #000000;
 	text-decoration: none;
 	background-color: transparent;
 	-webkit-text-decoration-skip: objects;
@@ -311,13 +311,24 @@ a {
 	margin: 0px;
 }
 
+
+
 a:hover {
 	color: #8d6214;
 	text-decoration: underline;
 }
 
+a-nav {
+	color: #ffffff;
+	text-decoration: none;
+	background-color: transparent;
+	-webkit-text-decoration-skip: objects;
+	padding: 5px;
+	margin: 0px;
+}
+
 .button-prev {
-	padding: 15px 25px;
+	padding: 12px 25px;
 	font-size: 24px;
 	text-align: center;
 	cursor: pointer;
@@ -879,6 +890,12 @@ pre code {
 	min-height: 1px;
 	padding-right: 15px;
 	padding-left: 15px;
+}
+
+.col-sm-11 {
+	margin: 0px;
+	padding: 0px;
+	text-align: center;
 }
 
 .col {
@@ -9868,6 +9885,7 @@ button.bg-dark:focus {
 
 .font-weight-bold {
 	font-weight: 700 !important;
+	color: white;
 }
 
 .font-italic {
@@ -21732,7 +21750,7 @@ a.thumbnail:hover {
 	position: relative;
 	display: inline-block;
 	font-weight: 400;
-	font-size: 54px;
+	font-size: 25px;
 	line-height: 56px;
 	font-style: normal;
 }
@@ -24383,7 +24401,7 @@ html .unit-spacing-lg>* {
 .navbar-inverse .h6,
 .context-dark .h6,
 .swiper-slide-caption .h6 {
-	color: #fff;
+	color: #000000;
 }
 
 .bg-deluge .form-label.auto-fill,
@@ -31061,7 +31079,7 @@ html[data-x-mode]:not(.lt-ie10) .not-animated {
 .owl-carousel-default .owl-next {
 	position: absolute;
 	top: 50%;
-	transition: .3s;
+	transition: .5s;
 	z-index: 1;
 	margin-top: -20px;
 	width: 40px;
@@ -31070,7 +31088,7 @@ html[data-x-mode]:not(.lt-ie10) .not-animated {
 	text-align: center;
 	font-size: 48px;
 	border-radius: 50%;
-	color: #fff;
+	color: #000000;
 	cursor: pointer;
 }
 
@@ -33885,16 +33903,38 @@ p .ambiente {
 }
 
 .botao{
-    border: solid 1px #ffffff;
+    border: solid 1px #000000;
     border-radius: 20px;
     color: #ffffff;
     background-color: #8d6214;
     transition: background-color 0.5s ease, color 0.5s ease, transform 0.5s ease;
 	font-size: 20px;
+	margin: 12px;
 }
+
 .botao:hover{
     background-color: #0000009e;
     color: white;
     transform: scale(1.2)
 }
 
+hr{
+	border-color:#aaa;
+	box-sizing:border-box;
+	width:100%;  
+  }
+
+  hr-2{
+	border-color:#aaa;
+	box-sizing:border-box;
+	width:100%;  
+  }
+
+  p.footer-text {
+	font-weight: 700 !important;
+	font-size: 20px;
+	line-height: 1.5;
+	padding: 0% 5%;
+	margin: auto;
+	color: white;
+  }
